Remove appsettings.Development.json for non-Debug configurations

--- a/src/LMSupplyDepots.HostApp/LMSupplyDepots.HostApp.csproj
+++ b/src/LMSupplyDepots.HostApp/LMSupplyDepots.HostApp.csproj
@@ -10,4 +10,7 @@
     <ProjectReference Include="..\LMSupplyDepots.Host\LMSupplyDepots.Host.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Remove="appsettings.Development.json" Condition="'$(Configuration)' != 'Debug'" />
+  </ItemGroup>
 </Project>
