Refactor sample application to streamline model loading and inference process; added OpenAI-compatible API testing and improved error handling. Introduced separate model download program for better organization and clarity.

--- a/.gitignore
+++ b/.gitignore
@@ -371,3 +371,4 @@ FodyWeavers.xsd
 output/
 /src/LMSupplyDepots.External.OpenAI.SampleConsoleApp/secrets.json
 /src/LMSupplyDepots.External.OpenAI.SampleConsoleApp/secrets.json
+.github/copilot-instructions.md
