--- a/src/LMSupplyDepots.External.LLamaEngine.Tests/LMSupplyDepots.External.LLamaEngine.Tests.csproj
+++ b/src/LMSupplyDepots.External.LLamaEngine.Tests/LMSupplyDepots.External.LLamaEngine.Tests.csproj
@@ -15,9 +15,12 @@
     <Compile Remove="LLMServiceTests.cs" />
     <Compile Remove="SystemMonitorServiceTests.cs" />
   </ItemGroup>
-
   <ItemGroup>
 	<PackageReference Include="Moq" Version="4.20.72" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.0" />
     <PackageReference Include="coverlet.collector" Version="6.0.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -32,6 +35,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LMSupplyDepots.External.LLamaEngine\LMSupplyDepots.External.LLamaEngine.csproj" />
+    <ProjectReference Include="..\LMSupplyDepots\LMSupplyDepots.csproj" />
+    <ProjectReference Include="..\LMSupplyDepots.Inference\LMSupplyDepots.Inference.csproj" />
   </ItemGroup>
 
   <ItemGroup>
