--- a/.github/workflows/hostapp.yml
+++ b/.github/workflows/hostapp.yml
@@ -114,9 +114,22 @@ jobs:
         $version = "${{ steps.version.outputs.VERSION }}"
         $platforms = '${{ steps.platforms.outputs.PLATFORMS }}' | ConvertFrom-Json
         $baseUrl = "https://grsiyustorage.blob.core.windows.net/filer-ai"
-        $sasToken = "?sv=2023-01-03&st=2025-04-04T06%3A13%3A35Z&se=2029-12-31T06%3A13%3A00Z&sr=c&sp=racwdxltf&sig=gIwiAIKa14jwmVKdXixch5LGH%2BE6C%2FwW9%2FzuUldWNp4%3D"
+        $sasToken = "${{ secrets.AZURE_SAS_TOKEN }}"
         
-        echo "Starting Azure Storage upload..."
+        Write-Host "Starting Azure Storage upload..."
+        Write-Host "Version: $version"
+        Write-Host "Platforms: $($platforms -join ', ')"
+        
+        # Check if SAS token is available
+        if ([string]::IsNullOrEmpty($sasToken)) {
+          Write-Host "✗ AZURE_SAS_TOKEN secret is not set"
+          exit 1
+        }
+        
+        if (-not $sasToken.StartsWith("?")) {
+          Write-Host "✗ AZURE_SAS_TOKEN should start with '?' character"
+          exit 1
+        }
         
         # Upload each platform-specific ZIP
         foreach ($platform in $platforms) {
@@ -124,39 +137,47 @@ jobs:
           $publishUrl = "$baseUrl/publish/lm-host/$platform/publish.zip$sasToken"
           $versionUrl = "$baseUrl/publish/lm-host/$platform/version.txt$sasToken"
           
+          Write-Host "Processing platform: $platform"
+          Write-Host "ZIP file: $zipFile"
+          
           if (Test-Path $zipFile) {
-            echo "Uploading $zipFile to Azure Storage for platform $platform..."
+            Write-Host "Uploading $zipFile to Azure Storage for platform $platform..."
             
             # Upload ZIP file
             try {
               Invoke-RestMethod -Uri $publishUrl -Method PUT -InFile $zipFile -ContentType "application/zip" -Headers @{
                 "x-ms-blob-type" = "BlockBlob"
               }
-              echo "✓ Successfully uploaded $zipFile"
+              Write-Host "✓ Successfully uploaded $zipFile"
             } catch {
-              echo "✗ Failed to upload $zipFile`: $_"
+              Write-Host "✗ Failed to upload ${zipFile}: $($_.Exception.Message)"
               exit 1
             }
             
             # Create and upload version.txt
-            $versionContent = "v$version"
+            $versionContent = "$version"
             $versionFile = "version-$platform.txt"
-            [System.IO.File]::WriteAllText($versionFile, $versionContent, [System.Text.UTF8Encoding]::new($false))
+            Write-Host "Creating version file: $versionFile with content: $versionContent"
             
             try {
+              $versionContent | Out-File -FilePath $versionFile -Encoding UTF8 -NoNewline
+              
               Invoke-RestMethod -Uri $versionUrl -Method PUT -InFile $versionFile -ContentType "text/plain" -Headers @{
                 "x-ms-blob-type" = "BlockBlob"
               }
-              echo "✓ Successfully uploaded version.txt for $platform (v$version)"
+              Write-Host "✓ Successfully uploaded version.txt for $platform ($version)"
             } catch {
-              echo "✗ Failed to upload version.txt for $platform`: $_"
+              Write-Host "✗ Failed to upload version.txt for ${platform}: $($_.Exception.Message)"
               exit 1
             }
             
             # Clean up temporary version file
-            Remove-Item $versionFile -Force -ErrorAction SilentlyContinue
+            if (Test-Path $versionFile) {
+              Remove-Item $versionFile -Force -ErrorAction SilentlyContinue
+              Write-Host "Cleaned up temporary file: $versionFile"
+            }
           } else {
-            echo "⚠ ZIP file not found: $zipFile"
+            Write-Host "⚠ ZIP file not found: $zipFile"
           }
         }
         
@@ -166,43 +187,50 @@ jobs:
           $allPlatformsUrl = "$baseUrl/publish/lm-host/all-platforms/publish.zip$sasToken"
           $allVersionUrl = "$baseUrl/publish/lm-host/all-platforms/version.txt$sasToken"
           
-          echo "Uploading all-platforms ZIP to Azure Storage..."
+          Write-Host "Uploading all-platforms ZIP to Azure Storage..."
           
           try {
             Invoke-RestMethod -Uri $allPlatformsUrl -Method PUT -InFile $allPlatformsZip -ContentType "application/zip" -Headers @{
               "x-ms-blob-type" = "BlockBlob"
             }
-            echo "✓ Successfully uploaded all-platforms ZIP"
+            Write-Host "✓ Successfully uploaded all-platforms ZIP"
           } catch {
-            echo "✗ Failed to upload all-platforms ZIP: $_"
+            Write-Host "✗ Failed to upload all-platforms ZIP: $($_.Exception.Message)"
             exit 1
           }
           
           # Create and upload version.txt for all-platforms
-          $versionContent = "v$version"
+          $versionContent = "$version"
           $allVersionFile = "version-all-platforms.txt"
-          [System.IO.File]::WriteAllText($allVersionFile, $versionContent, [System.Text.UTF8Encoding]::new($false))
+          Write-Host "Creating all-platforms version file: $allVersionFile"
           
           try {
+            $versionContent | Out-File -FilePath $allVersionFile -Encoding UTF8 -NoNewline
+            
             Invoke-RestMethod -Uri $allVersionUrl -Method PUT -InFile $allVersionFile -ContentType "text/plain" -Headers @{
               "x-ms-blob-type" = "BlockBlob"
             }
-            echo "✓ Successfully uploaded version.txt for all-platforms (v$version)"
+            Write-Host "✓ Successfully uploaded version.txt for all-platforms ($version)"
           } catch {
-            echo "✗ Failed to upload version.txt for all-platforms: $_"
+            Write-Host "✗ Failed to upload version.txt for all-platforms: $($_.Exception.Message)"
             exit 1
           }
           
           # Clean up temporary version file
-          Remove-Item $allVersionFile -Force -ErrorAction SilentlyContinue
+          if (Test-Path $allVersionFile) {
+            Remove-Item $allVersionFile -Force -ErrorAction SilentlyContinue
+            Write-Host "Cleaned up temporary file: $allVersionFile"
+          }
         }
         
-        echo "========================================="
-        echo "Azure Storage upload completed successfully!"
-        echo "Uploaded platforms: $($platforms -join ', ')"
-        echo "Version: v$version"
-        echo "========================================="
+        Write-Host "========================================="
+        Write-Host "Azure Storage upload completed successfully!"
+        Write-Host "Uploaded platforms: $($platforms -join ', ')"
+        Write-Host "Version: $version"
+        Write-Host "========================================="
       shell: powershell
+      env:
+        AZURE_SAS_TOKEN: ${{ secrets.AZURE_SAS_TOKEN }}
       
     - name: Generate Release Notes
       id: notes
