Update API structure, models, and add tests
- Modified `chat_request.json` and `embedding_request.json` to update models and input structures.
- Changed base URLs and updated requests in `downloads.http`, `local-scenario.http`, `system.http`, and `v1.http`.
- Updated model paths in `load_chat.json`, `load_embedding.json`, and `reload_embedding.json`.
- Added new test files for alias functionality and OpenAI compliance.
- Improved logging and error handling in various service files.
- Removed unnecessary main method in `Program.cs`.
- Updated `appsettings.json` to include new configuration for LMSupplyDepots.
- Enhanced service registration and logging in `ServiceCollectionExtensions.cs` and `InferenceServiceExtensions.cs`.
- Updated solution file to include the new test project.

--- a/src/LMSupplyDepots.HostApp/appsettings.json
+++ b/src/LMSupplyDepots.HostApp/appsettings.json
@@ -6,5 +6,8 @@
             "LMSupplyDepots": "Information"
         }
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "LMSupplyDepots": {
+        "DataPath": "d:/filer-data"
+    }
 }
