Refactor OpenAI API integration and update tests
- Updated `.gitignore` to exclude specific files and directories.
- Modified `v1.http` API tests for new specifications, including base URL and request parameters.
- Enhanced error handling tests with new scenarios and validations.
- Introduced `IOpenAIConverterService` and updated related tests to use the new service.
- Refactored `V1Controller` to utilize the new converter service for request and response handling.
- Added new JSON converters for improved content type handling.
- Enhanced OpenAI-related models with new properties for better compliance with the API.

--- a/.gitignore
+++ b/.gitignore
@@ -372,3 +372,5 @@ output/
 /src/LMSupplyDepots.External.OpenAI.SampleConsoleApp/secrets.json
 /src/LMSupplyDepots.External.OpenAI.SampleConsoleApp/secrets.json
 .github/copilot-instructions.md
+
+docs/open-ai-docs/
