--- a/src/LMSupplyDepots.SampleApp/LMSupplyDepots.SampleApp.csproj
+++ b/src/LMSupplyDepots.SampleApp/LMSupplyDepots.SampleApp.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5" />
+    <PackageReference Include="System.Text.Json" Version="9.0.1" />
   </ItemGroup>
 
   <ItemGroup>
