feat: Implement Llama model metadata service and extractor
- Added LlamaModelMetadataService for managing model metadata extraction using LlamaSharp.
- Introduced ModelMetadataExtractor to extract comprehensive metadata from GGUF model files.
- Integrated dynamic tool formatting based on model metadata in LMSupplyDepot.
- Updated OpenAIConverterService to use 'antiprompt' instead of 'stop' for generation parameters.
- Created IModelMetadataService interface for better abstraction and service management.
- Enhanced sample application to demonstrate dynamic architecture detection and tool-enabled generation.

--- a/src/LMSupplyDepots.External.LLamaEngine/LMSupplyDepots.External.LLamaEngine.csproj
+++ b/src/LMSupplyDepots.External.LLamaEngine/LMSupplyDepots.External.LLamaEngine.csproj
@@ -13,4 +13,12 @@
 				<PackageReference Include="LLamaSharp.Backend.Vulkan" Version="0.24.0" />
 				<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.5" />
 		</ItemGroup>
+		
+		<ItemGroup>
+				<Compile Remove="Examples\**" />
+				<Compile Remove="Extensions\ServiceCollectionExtensions.cs" />
+				<Compile Remove="Services\ModelMetadataExtractor.cs" />
+				<Compile Remove="Services\DynamicChatTemplateService.cs" />
+				<Compile Remove="Services\LlamaModelMetadataService.cs" />
+		</ItemGroup>
 </Project>
