--- a/src/LMSupplyDepots.ModelHub/LMSupplyDepots.ModelHub.csproj
+++ b/src/LMSupplyDepots.ModelHub/LMSupplyDepots.ModelHub.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.5" />
   </ItemGroup>
 
   <ItemGroup>
