--- a/src/LMSupplyDepots.External.OpenAI/LMSupplyDepots.External.OpenAI.csproj
+++ b/src/LMSupplyDepots.External.OpenAI/LMSupplyDepots.External.OpenAI.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.5" />
-		<PackageReference Include="OpenAI" Version="2.2.0-beta.4" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.7" />
+		<PackageReference Include="OpenAI" Version="2.2.0" />
 	</ItemGroup>
 </Project>
