--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -19,6 +19,7 @@
   <!-- ASP.NET Core -->
   <ItemGroup Label="ASP.NET Core">
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.9" />
+    <PackageVersion Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
   </ItemGroup>
 
   <!-- System -->
@@ -31,6 +32,7 @@
   <ItemGroup Label="AI ML">
     <PackageVersion Include="LLamaSharp" Version="0.25.0" />
     <PackageVersion Include="LLamaSharp.Backend.Cpu" Version="0.25.0" />
+    <PackageVersion Include="LLamaSharp.Backend.Cuda11" Version="0.24.0" />
     <PackageVersion Include="LLamaSharp.Backend.Cuda12" Version="0.25.0" />
     <PackageVersion Include="LLamaSharp.Backend.Vulkan" Version="0.25.0" />
     <PackageVersion Include="OpenAI" Version="2.4.0" />
@@ -38,16 +40,20 @@
 
   <!-- Testing -->
   <ItemGroup Label="Testing">
-    <PackageVersion Include="xunit" Version="2.9.2" />
+    <PackageVersion Include="xunit" Version="2.9.3" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.4" />
-    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageVersion Include="Moq" Version="4.20.72" />
     <PackageVersion Include="FluentAssertions" Version="6.12.1" />
+    <PackageVersion Include="coverlet.collector" Version="6.0.4" />
   </ItemGroup>
 
   <!-- Third Party -->
   <ItemGroup Label="Third Party">
     <PackageVersion Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageVersion Include="Humanizer" Version="2.14.1" />
+    <PackageVersion Include="Serilog.Extensions.Logging" Version="9.0.2" />
+    <PackageVersion Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageVersion Include="Serilog.Sinks.File" Version="7.0.0" />
   </ItemGroup>
 </Project>
