--- a/src/LMSupplyDepots.CLI/LMSupplyDepots.CLI.csproj
+++ b/src/LMSupplyDepots.CLI/LMSupplyDepots.CLI.csproj
@@ -12,8 +12,8 @@
 		</PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.9" />
-    <PackageReference Include="System.CommandLine.NamingConventionBinder" Version="2.0.0-beta4.22272.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" />
+    <PackageReference Include="System.CommandLine.NamingConventionBinder" />
   </ItemGroup>
 
   <ItemGroup>
