--- a/src/LMSupplyDepots.External.LLamaEngine.SampleConsoleApp/LMSupplyDepots.External.LLamaEngine.SampleConsoleApp.csproj
+++ b/src/LMSupplyDepots.External.LLamaEngine.SampleConsoleApp/LMSupplyDepots.External.LLamaEngine.SampleConsoleApp.csproj
@@ -8,9 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.9" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.9" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+    <PackageReference Include="Microsoft.Extensions.Logging" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" />
   </ItemGroup>
 
   <ItemGroup>
