--- a/src/LMSupplyDepots.External.LLamaEngine/LMSupplyDepots.External.LLamaEngine.csproj
+++ b/src/LMSupplyDepots.External.LLamaEngine/LMSupplyDepots.External.LLamaEngine.csproj
@@ -3,15 +3,17 @@
 				<TargetFramework>net9.0</TargetFramework>
 				<ImplicitUsings>enable</ImplicitUsings>
 				<Nullable>enable</Nullable>
+				<!-- Define compilation symbol when LLama backends are available -->
+				<DefineConstants Condition="'$(SkipLLamaBackends)' != 'true'">$(DefineConstants);LLAMA_BACKENDS_AVAILABLE</DefineConstants>
 		</PropertyGroup>
 
 		<ItemGroup>
-				<PackageReference Include="LLamaSharp" Version="0.25.0" />
-				<PackageReference Include="LLamaSharp.Backend.Cpu" Version="0.25.0" />
-				<PackageReference Include="LLamaSharp.Backend.Cuda11" Version="0.24.0" />
-				<PackageReference Include="LLamaSharp.Backend.Cuda12" Version="0.25.0" />
-				<PackageReference Include="LLamaSharp.Backend.Vulkan" Version="0.25.0" />
-				<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.9" />
+				<PackageReference Include="LLamaSharp" />
+				<PackageReference Include="LLamaSharp.Backend.Cpu" />
+				<PackageReference Include="LLamaSharp.Backend.Cuda11" />
+				<PackageReference Include="LLamaSharp.Backend.Cuda12" />
+				<PackageReference Include="LLamaSharp.Backend.Vulkan" />
+				<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
 		</ItemGroup>
 		
 		<ItemGroup>
