--- a/src/LMSupplyDepots.External.OpenAI/LMSupplyDepots.External.OpenAI.csproj
+++ b/src/LMSupplyDepots.External.OpenAI/LMSupplyDepots.External.OpenAI.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.9" />
-		<PackageReference Include="OpenAI" Version="2.4.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
+		<PackageReference Include="OpenAI" />
 	</ItemGroup>
 </Project>
