--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,19 +1,61 @@
 <Project>
+  <!-- Global MSBuild properties for all projects -->
   <PropertyGroup>
+    <!-- Language and nullable settings -->
     <LangVersion>preview</LangVersion>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
+
+    <!-- Package metadata -->
     <Version>0.1.0</Version>
     <Authors>iyulab</Authors>
     <PackageTags>iyulab</PackageTags>
     <PackageIcon>logo.png</PackageIcon>
     <Owners>iyulab-rnd</Owners>
     <Copyright>Copyright (c) Iyulab Corporation 2024.</Copyright>
-    <PackageProjectUrl>https://github.com/iyulab/DollarSignEngine</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/iyulab/DollarSignEngine</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/iyulab/LMSupplyDepot</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/iyulab/LMSupplyDepot</RepositoryUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/iyulab-rnd/public/main/images/iyulab_128.png</PackageIconUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+
+    <!-- Enable NuGet audit for security vulnerability scanning -->
+    <NuGetAudit>true</NuGetAudit>
+    <NuGetAuditMode>direct</NuGetAuditMode>
+    <NuGetAuditLevel>low</NuGetAuditLevel>
+
+    <!-- Treat audit warnings as errors in CI/CD -->
+    <TreatWarningsAsErrors Condition="'$(CI)' == 'true'">true</TreatWarningsAsErrors>
+
+    <!-- Code analysis settings -->
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <AnalysisLevel>latest</AnalysisLevel>
+
+    <!-- Reproducible builds -->
+    <Deterministic>true</Deterministic>
+    <ContinuousIntegrationBuild Condition="'$(CI)' == 'true'">true</ContinuousIntegrationBuild>
+
+    <!-- Central package management -->
+    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
+
+  <!-- Package vulnerability warnings to treat as errors -->
+  <PropertyGroup>
+    <WarningsAsErrors />
+    <WarningsNotAsErrors />
+    <!-- NU1901-NU1904 are NuGet audit warnings -->
+    <TreatWarningsAsErrors Condition="'$(CI)' == 'true'">true</TreatWarningsAsErrors>
+  </PropertyGroup>
+
+  <!-- Security-related MSBuild properties -->
+  <PropertyGroup>
+    <!-- Enable source link for debugging -->
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+  </PropertyGroup>
+
+  <!-- Package files for distribution -->
   <ItemGroup>
     <None Include="../logo.png" Pack="true" PackagePath="" />
     <None Include="../../README.md" Pack="true" PackagePath="\" />
