--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -68,66 +68,5 @@ jobs:
     - name: Run tests
       run: |
         echo "Running CI tests (excluding LocalIntegration tests)..."
-        dotnet test src/LMSupplyDepots.sln --configuration Release --no-build --verbosity normal --logger trx --results-directory "TestResults/" --filter "Category!=LocalIntegration" -p:WarningsNotAsErrors=NU1507
-      shell: powershell
-
-    - name: Upload test results
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: test-results
-        path: TestResults/*.trx
-        retention-days: 7
-
-    - name: Test summary
-      if: always()
-      run: |
-        echo "CI test execution completed (LocalIntegration tests excluded)."
-        echo "Test result files:"
-        if (Test-Path "TestResults") {
-          Get-ChildItem -Path "TestResults" -Filter "*.trx" | ForEach-Object {
-            echo "  - $($_.Name)"
-          }
-        } else {
-          echo "  No test result files found"
-        }
-        echo ""
-        echo "ℹ️ Note: Tests requiring local models/API keys are excluded from CI"
-        echo "   Run locally with: dotnet test --filter 'Category=LocalIntegration'"
-      shell: powershell
-
-    - name: Build validation
-      run: |
-        echo "Build validation completed successfully!"
-        echo ""
-        echo "Projects built:"
-        echo "✅ Core Libraries:"
-        echo "  - LMSupplyDepots (domain models)"
-        echo "  - LMSupplyDepots.ModelHub (model management)"
-        echo "  - LMSupplyDepots.Inference (inference engines)"
-        echo ""
-        echo "✅ External Wrappers:"
-        echo "  - LMSupplyDepots.External.HuggingFace"
-        echo "  - LMSupplyDepots.External.LLamaEngine"
-        echo "  - LMSupplyDepots.External.OpenAI"
-        echo ""
-        echo "✅ SDK & Applications:"
-        echo "  - LMSupplyDepots.SDK"
-        echo "  - LMSupplyDepots.Host"
-        echo "  - LMSupplyDepots.HostApp"
-        echo "  - LMSupplyDepots.CLI"
-        echo ""
-        echo "✅ Test Projects:"
-        echo "  - LMSupplyDepots.External.HuggingFace.Tests"
-        echo "  - LMSupplyDepots.External.LLamaEngine.Tests"
-        echo "  - LMSupplyDepots.Host.Tests"
-        echo ""
-        echo "Build artifacts are ready for deployment via hostapp.yml workflow."
-        echo ""
-        echo "📝 Local Testing Information:"
-        echo "  - CI tests exclude LocalIntegration category (external dependencies)"
-        echo "  - To run local tests with models/APIs:"
-        echo "    dotnet test --filter 'Category=LocalIntegration'"
-        echo "  - To run all tests (CI + Local):"
-        echo "    dotnet test"
+        dotnet test src/LMSupplyDepots.sln --configuration Release --no-build --verbosity normal --filter "Category!=LocalIntegration" -p:WarningsNotAsErrors=NU1507
       shell: powershell
